refactor: modified constructor dto
